--- a/LR/lr/public/repofringe/index.html
+++ b/LR/lr/public/repofringe/index.html
@@ -5,8 +5,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <title>RepoFringe Browser</title>
-    <link rel="stylesheet" href="app.css" type="text/css">
+    <!-- <link rel="stylesheet" href="app.css" type="text/css"> -->
     <link rel="stylesheet" href="jquery-ui.css" type="text/css">
+    <link rel="stylesheet/less" href="app.less" type="text/css">
+    <script src="less-1.1.3.min.js" type="text/javascript"></script>
+    <script src="https://browserid.org/include.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -14,10 +17,15 @@
 <form id="search-form">
     <input type="hidden" id="cur-keys" name="cur-keys" value=""/>
     <fieldset>
-	    <label for="keys">Keyword:<input id="keys" name="keys" type="text" value="algebra"/></label>
-	    <input type="submit" value="Browse">
-	    	    
-	    <div id="title">LR Visual Filter</div>
+		<div class="title">LR Visual Filter</div>
+	    <div class="infoblock">
+            <div class="picture"></div>
+            <div class="login"><img id="sign-in" src="https://browserid.org/i/sign_in_orange.png" /></div>      
+        </div>
+	    <div class="form">
+		    <label for="keys">Keyword:<br/><input id="keys" name="keys" type="text" value="algebra"/></label>
+		    <input type="submit" value="Browse">
+	    </div>
 	    
     </fieldset>
 </form>
@@ -27,12 +35,13 @@
 <div id="related-keys">
 </div>
 
+
 <div id="results">
 <table id="resources">
-<thead>
+<thead id="resource_head">
 <tr>
-    <th>Thumbnail</th>
-    <th>Details</th>
+    <th class="thumb">Thumbnail</th>
+    <th class="details">Details</th>
 </tr>
 </thead>
 <tbody id="resource_body"></tbody>
@@ -47,8 +56,8 @@
 
 <script type="text/x-mustache" id="resourceRowTemplate">
     <tr>
-        <td>{{{thumbnail}}}</td>
-        <td>
+        <td class="thumb">{{{thumbnail}}}</td>
+        <td class="details">
             <div class="resource_name"><a class="resource-locator" href="{{resource_locator_url}}" target="_blank">{{resource_locator_url}}</a></div>
             {{#identity}}
             {{#owner}}<div class="id_owner">Owner: {{owner}}</div>{{/owner}}
@@ -57,7 +66,7 @@
             {{/identity}}
             <div class="unknown">Average Educator Rating: &#9734;&#9734;&#9734;&#9734;&#9734;</div>
             <div class="unknown">Average Student Rating: &#9734;&#9734;&#9734;&#9734;&#9734;</div>
-            <div class="unknown">Comments: TBD <a href="javascript:openDialog();">view</a> <a href="#">add</a>
+            <div class="unknown">Comments: TBD <a class="view" href="javascript:openDialog();">view</a> <a class="add secure" href="#">add</a>
         </td>
     </tr>
 </script>
@@ -67,8 +76,8 @@
 </script>
 
 <script type="text/x-mustache" id="thumbnailTemplate">
-<iframe FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=192 HEIGHT=256 
-src="http://wimg.ca/uc_y_mode_iframe_w_256_h_192/{{{resource_locator}}}"></iframe>
+<iframe FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=120 HEIGHT=90 
+src="http://wimg.ca/uc_y_mode_iframe_w_120_h_90/{{{resource_locator}}}"></iframe>
 </script>
 
 <script type="text/x-mustache" id="keywordModelTemplate">
@@ -89,9 +98,9 @@ src="http://wimg.ca/uc_y_mode_iframe_w_256_h_192/{{{resource_locator}}}"></ifram
 <script src="/_utils/script/jquery.couch.js"></script>
 <script src="jquery.mustache.js"></script>
 <script src="jquery-ui.min.js"></script>
+<script src="http://crypto-js.googlecode.com/files/2.2.0-crypto-md5.js" type="text/javascript"></script>
 <script src="app.js"></script>
+<script src="id.js"></script>
 <!--[if IE]><script language="javascript" type="text/javascript" src="excanvas.js"></script><![endif]-->
 <script src="jit-yc.js"></script>
-<script src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e39e9cd70e035a6"></script>
-
 </html>
