changed default search term
Signed-off-by: Jim Klo <jim.klo@sri.com>

--- a/LR/lr/public/repofringe/index.html
+++ b/LR/lr/public/repofringe/index.html
@@ -23,7 +23,7 @@
             <div class="login"><img id="sign-in" src="https://browserid.org/i/sign_in_orange.png" /></div>      
         </div>
 	    <div class="form">
-		    <label for="keys">Keyword:<br/><input id="keys" name="keys" type="text" value="algebra"/></label>
+		    <label for="keys">Keyword:<br/><input id="keys" name="keys" type="text" value="equations"/></label>
 		    <input type="submit" value="Browse">
 	    </div>
 	    
